--- a/client/src/styles/_imports/settings/env.misc.css
+++ b/client/src/styles/_imports/settings/env.misc.css
@@ -4,9 +4,9 @@ Miscellaneous
 
 These are miscellaneous standard values, like a recurring ratio.
 
-<small>Better formatting is pending [Framework, Typography and Color support](https://github.com/kss-node/kss-node/issues/388).</small>
+> Example code and better formatting are pending [Framework, Typography and Color support](https://github.com/kss-node/kss-node/issues/388) or a creative but simple workaround.
 
---phi: 1.618
+--phi - 1.618
 
 Styleguide Settings.CustomEnvironmentalVariables.Miscellaneous
 */
