--- a/client/src/styles/_imports/settings/env.space.css
+++ b/client/src/styles/_imports/settings/env.space.css
@@ -4,16 +4,16 @@ Space
 
 These are the standard space dimensions. They should follow a ratio defined by the designer. Such as one for exponential growth or the Golden Ratio (ϕ).
 
-<small>Better formatting is pending [Framework, Typography and Color support](https://github.com/kss-node/kss-node/issues/388).</small>
+> Example code and better formatting are pending [Framework, Typography and Color support](https://github.com/kss-node/kss-node/issues/388) or a creative but simple workaround.
 
---space--xxx-small:   0.25rem
---space--xx-small:    0.4rem
---space--x-small:     0.6rem
---space--small:       1.0rem
---space--normal:      1.8rem
---space--large:       3.0rem
---space--x-large:     4.8rem
---space--xx-large:    8.0rem
+--space--xxx-small - 0.25rem
+--space--xx-small - 0.4rem
+--space--x-small - 0.6rem
+--space--small - 1.0rem
+--space--normal - 1.8rem
+--space--large - 3.0rem
+--space--x-large - 4.8rem
+--space--xx-large - 8.0rem
 
 Styleguide Settings.CustomEnvironmentalVariables.Space
 */
