--- a/client/src/styles/_imports/settings/env.vw.css
+++ b/client/src/styles/_imports/settings/env.vw.css
@@ -4,11 +4,11 @@ Viewport Width
 
 These are the standard viewport widths. Use these to define media queries.
 
-<small>Better formatting is pending [Framework, Typography and Color support](https://github.com/kss-node/kss-node/issues/388).</small>
+> Example code and better formatting are pending [Framework, Typography and Color support](https://github.com/kss-node/kss-node/issues/388) or a creative but simple workaround.
 
---vw--narrow:         360px
---vw--medium:         580px
---vw--wide:           940px
+--vw--narrow - 360px
+--vw--medium - 580px
+--vw--wide - 940px
 
 Styleguide Settings.CustomEnvironmentalVariables.ViewportWidth
 */
