--- a/client/src/styles/_imports/components/c-intro.twig
+++ b/client/src/styles/_imports/components/c-intro.twig
@@ -1,4 +1,4 @@
-<main class="c-sample" id="c-intro">
+<main class="c-sample" id="c-intro {{modifier_class}}">
   <h2>Octopus Greatness</h2>
   <section class="c-intro">
     <p class="c-intro__major-text">Octopus are the best.</p>
