--- a/client/src/styles/_imports/objects/o-app.twig
+++ b/client/src/styles/_imports/objects/o-app.twig
@@ -1,6 +1,6 @@
 <main class="c-sample" id="o-app">
   <section class="c-sample__block">
-    <div class="o-app {{modifier_class}}">
+    <div class="o-app">
       <!-- CAVEAT:  The core implementations hide unsupported child elements.
                     For complex layouts, use CSS grid instead of flexbox. -->
       <header class="c-sample__block o-app__head">I am the header.</header>
